Fix a bug: the page header is invisible if div height exceeds the view heigth

--- a/file-upload-frontend/src/app.css
+++ b/file-upload-frontend/src/app.css
@@ -1,3 +1,4 @@
-.wrapper {
+.root {
+  flex-grow: 1;
   min-height: 100vh;
 }
